# python-project-lvl2

./: .coverage  README.md  coverage.xml  makefile  pyproject.toml  setup.cfg
.github/workflows/: check_github.yml  makefile.yml
gendiff/: gendiff.py  gendiff_main.py  generate_diff.py
gendiff/include/: check_dict_value.py  compare.py  plain.py  render.py
package/: file4.yaml  gendiff.py  gendiff_json.py  gendiff_main.py  gendiff_yaml.py
package/include/: check_dict_value.py  check_things_value.py  compare.py  diff.py  generate_diff.py  out_json.py  parser.py  plain.py  render.py
tests/: test_gendiff_main.py
tests/fixtures/: file3.yaml  test_out_json.txt  test_yaml.txt
