[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Chudilo4 <chipalinchik@gmail.com>"]
packages = [  { include = "package" },]


[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
pytest = "^7.1.2"
coverage = "^6.4.3"
pytest-cov = "^3.0.0"
PyYAML = "^6.0"
flake8 = ">=4.0.1"


[tool.poetry.scripts]
gendiff = "package.gendiff_main:main"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
